# scufForte

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp  test.xml
client/: CMakeLists.txt  client.cpp  test.xml
forte/: CMakeLists.txt  test.cpp  test.xml
forte/src/app/: CMakeLists.txt  server.cpp  server.h
forte/src/typeLib/: IFB.cpp  IFB.h
forte/src/typeLib/modules/: FBConsoleOut.h
scufford/: CMakeLists.txt  scufford.cpp
scufford/src/: CMakeLists.txt
scufford/src/app/: CMakeLists.txt  graph.cpp  graph.h  parser.cpp  parser.h  server.cpp  server.h
scufford/src/typeLib/: CMakeLists.txt  IFB.cpp  IFB.h  globalOutputsList.cpp  globalOutputsList.h
scufford/src/typeLib/modules/: FBConsoleOut.cpp  FBSumOfTwo.cpp
scufford/test_data/: testfoo_FORTE_PC.fboot
src/: CMakeLists.txt
src/app/: CMakeLists.txt  graph.cpp  graph.h  parser.cpp  parser.h
src/typeLib/: CMakeLists.txt  IFB.cpp  IFB.h  globalOutputsList.cpp  globalOutputsList.h  globalOutputsLists.cpp
src/typeLib/modules/: CMakeLists.txt  FBConsoleOut.cpp  FBConsoleOut.h  FBSumOfTwo.cpp  FBSumOfTwo.h
src/xmlLib/: parser.cpp  parser.h
